--- a/.github/workflows /project-pipeline.yaml
+++ b/.github/workflows /project-pipeline.yaml
@@ -23,13 +23,12 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2-
 
       - name: Build project
-        run: |
-          mvn -B clean package -DskipTests=true
+        run: mvn -B clean package -DskipTests=true
 
   test:
     name: Run Tests
@@ -49,10 +48,9 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2-
 
       - name: Run unit tests only
-        run: |
-          mvn -B test
+        run: mvn -B test
